--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Build & Push Image
       run: |
         echo "${{ secrets.DOCKERPW }}" | docker login -u "chiths1616" --password-stdin
-        docker image build -t dab8106/pyflask:latest .
+        docker image build -t chiths1616/pyflask:latest .
         docker push chiths1616/pyflask:latest
